fixed spacing for bigger toast

--- a/react/src/components/Predictor.css
+++ b/react/src/components/Predictor.css
@@ -1,5 +1,6 @@
 .text-muted {
     color: #7a7676;
+    margin-top: 40px;
 }
 
 .dropdowns {
